samples/_failures_safe/1761398379_b9d629_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2266056.c: In function ‘main’:
./samples/SAFE/__tmp_c2266056.c:149:13: error: expected declaration or statement at end of input
  149 |             show_all = 1;
      |             ^~~~~~~~
./samples/SAFE/__tmp_c2266056.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c2266056.c:149:13: error: expected declaration or statement at end of input
